--- a/styles/global.css
+++ b/styles/global.css
@@ -56,14 +56,23 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 h1 {
-    font-size:42px;
+	font-weight:bold;
+	font-size:42px;
 	color: var(--text-light);
 }
 
 h2 {
+	font-weight:bold;
 	font-size:36px;
 	margin-top:15px;
 	margin-bottom:10px;
+}
+
+h3 {
+	font-weight:bold;
+	font-size:16px;
+	margin-top:10px;
+	margin-bottom:7px;
 }
 
 h5 {
