--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,33 @@
     background-color:var(--background-wrap);
 }
 
+.links {
+    display:table;
+    vertical-align: middle;
+    width:20%;
+    padding:20px;
+}
+
+.links-wrap {
+    display:table-cell;
+    vertical-align:middle;
+}
+
+.links-table {
+    display:table;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+.link-wrap {
+    display:table-row;
+}
+
+.link-wrap button {
+    margin-top: 7px;
+    margin-bottom: 7px;
+}
+
 /* About Me Start */
 
 #about-me {
@@ -23,33 +50,6 @@
 .about-me-text {
     width:80%;
     padding:20px;
-}
-
-.about-me-links {
-    display:table;
-    vertical-align: middle;
-    width:20%;
-    padding:20px;
-}
-
-.about-me-links-wrap {
-    display:table-cell;
-    vertical-align:middle;
-}
-
-.about-me-links-table {
-    display:table;
-    margin-left:auto;
-    margin-right:auto;
-}
-
-.about-me-link-wrap {
-    display:table-row;
-}
-
-.about-me-link-wrap button {
-    margin-top: 7px;
-    margin-bottom: 7px;
 }
 
 #about-me .languages {
@@ -71,18 +71,25 @@
 
 #experience {
     width:100%;
-    height:1000px;
+    height:400px;
     display:flex;
     justify-content:center;
 }
 
 .experience-wrap {
     width:1280px;
-    display:flex;
+}
+
+.experience-wrap h2 {
+	padding-top:0px;
+	padding-bottom:0px;
+	padding-left:20px;
+	padding-right:20px;
+	margin-bottom:0px;
 }
 
 .experience-text {
-    width:65%;
+    width:80%;
     padding:20px;
 }
 
@@ -91,13 +98,31 @@
     padding:20px;
 }
 
+.UKO {
+	display:flex;
+}
+
+.TNS {
+	display:flex;
+}
+
+.UKO-text {
+	padding:20px;
+	width:80%;
+}
+
+.TNS-text {
+	padding:20px;
+	width:80%;
+}
+
 /* Experience End */
 
 /* Projects Start */
 
 #projects {
     width:100%;
-    height:1000px;
+    height:300px;
     display:flex;
     justify-content:center;
 }
@@ -108,7 +133,7 @@
 }
 
 .projects-text {
-    width:65%;
+    width:80%;
     padding:20px;
 }
 
