--- a/styles/index.css
+++ b/styles/index.css
@@ -71,13 +71,13 @@
 
 #experience {
     width:100%;
-    height:400px;
     display:flex;
     justify-content:center;
 }
 
 .experience-wrap {
     width:1280px;
+    padding-top:80px;
 }
 
 .experience-wrap h2 {
@@ -106,6 +106,10 @@
 	display:flex;
 }
 
+.Robotics {
+	display:flex;
+}
+
 .UKO-text {
 	padding:20px;
 	width:80%;
@@ -122,24 +126,93 @@
 
 #projects {
     width:100%;
-    height:300px;
     display:flex;
     justify-content:center;
 }
 
+.projects-text p {
+    padding:20px;
+}
+
 .projects-wrap {
     width:1280px;
-    display:flex;
+    padding-top:80px;
 }
 
-.projects-text {
-    width:80%;
-    padding:20px;
+.projects-wrap h2 {
+	padding-top:0px;
+	padding-bottom:0px;
+	padding-left:20px;
+	padding-right:20px;
+	margin-bottom:0px;
 }
 
-.projects-link {
-    width:65%;
-    padding:20px;
+.JChessV2 {
+	display:flex;
+}
+
+.JC-text {
+	padding:20px;
+	width:80%;
+}
+
+.Mandelbrot {
+	display:flex;
+}
+
+.Mandelbrot-text {
+	padding:20px;
+	width:80%;
+}
+
+.JEL {
+	display:flex;
+}
+
+.JEL-text {
+	padding:20px;
+	width:80%;
 }
 
 /* Projects End */
+
+hr {
+	width:60%;
+}
+
+@media all and (max-width: 1000px) {
+	#projects * {
+		justify-content:center;
+		flex-wrap:wrap;
+	}
+
+	.JChessV2 * {
+		width:100%;
+	}
+
+	.Mandelbrot * {
+		width:100%;
+	}
+
+	.JEL * {
+		width:100%;
+	}
+
+	#about-me * {
+		justify-content:center;
+		flex-wrap:wrap;
+	}
+
+	#about-me * * {
+		width:100%;
+	}
+
+	#experience * {
+		justify-content:center;
+		flex-wrap:wrap;
+	}
+
+	#experience * * {
+		width:100%;
+	}
+}
